--- a/mysql/vars/main.yml
+++ b/mysql/vars/main.yml
@@ -1,2 +1,11 @@
 ---
 # vars file for mysql
+
+---
+
+#MySQL Settings
+mysql_db: "wordpress_db"
+mysql_user: "wordpress"
+mysql_password: "12345"
+mysql_root_password: "Aa123456"
+http_host: "mysite"
